@@ -34,8 +34,9 @@ from openquake.baselib.general import distinct, pprod
 from openquake.baselib import config, hdf5
 from openquake.hazardlib import imt, scalerel, gsim, pmf, site, tom
 from openquake.hazardlib.gsim.base import registry, gsim_aliases
-from openquake.hazardlib.calc.filters import (
-    IntegrationDistance, floatdict)  # noqa
+from openquake.hazardlib.calc.filters import (  # noqa
+    IntegrationDistance, floatdict
+)
 
 PRECISION = pmf.PRECISION
 
